[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "bloodyAD"
authors = [
    { name="CravateRouge", email="baptiste@cravaterouge.com" },
]
version = "2.1.8"
description = "AD Privesc Swiss Army Knife"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
dependencies = [
        "cryptography==44.0.1",
        "msldap==0.5.14",
        "winacl==0.1.9",
        "asn1crypto==1.5.1",
        "dnspython==2.7.0",
        "minikerberos @ git+https://github.com/skelsec/minikerberos.git@b0de95f70a46ffd46dcaac4fd06348df7a884819",
        "asyauth @ git+https://github.com/skelsec/asyauth.git@51f69e145ac0440e4d065c9c3dff27fd2971cecb"
]

[project.urls]
"Homepage" = "https://github.com/CravateRouge/bloodyAD"
"Bug Tracker" = "https://github.com/CravateRouge/bloodyAD/issues"

[project.scripts]
bloodyAD = "bloodyAD.main:main"